# embedded-test-issue

./: README.md
minimal-firmware/: Cargo.toml  build.rs
minimal-firmware/.cargo/: config.toml
minimal-firmware/tests/: simple_test.rs
